@@ -54,10 +54,15 @@
 
 ;;; Code:
 
+(require 'chess)
 (require 'chess-algebraic)
+(require 'chess-display)
 (require 'chess-fen)
+(require 'chess-game)
 (require 'chess-ply)
 (require 'chess-message)
+(require 'mm-decode)
+(require 'mm-view)
 
 (eval-when-compile
   (require 'pcomplete nil t))
@@ -151,15 +156,21 @@ Optionally use the supplied STRING instead of the current buffer."
 	       (goto-char (match-beginning 0))))
       (let ((game (chess-game-create)))
 	(chess-game-set-tags game nil)
-	(while (looking-at "\\[\\(\\S-+\\)\\s-+\\(\".*?\"\\)\\][ \t\n\r]+")
+	(while (looking-at (rx
+			    ?[ (group (one-or-more (not (syntax whitespace))))
+			       (one-or-more (syntax whitespace))
+			       (syntax string-quote)
+			       (group (*? not-newline))
+			       (syntax string-quote)
+			       ?]
+			    (one-or-more (char ?  ?\n ?\r ?\t))))
 	  (chess-game-set-tag game (match-string-no-properties 1)
-			      (let ((str (match-string-no-properties 2)))
-				(substring str 1 (1- (length str)))))
+			      (match-string-no-properties 2))
 	  (goto-char (match-end 0)))
 	(let ((fen (chess-game-tag game "FEN")))
-	  (if fen
-	      (chess-game-set-start-position game (chess-fen-to-pos fen)))
-	  (chess-game-set-plies game (chess-pgn-read-plies game (chess-game-pos game) t)))
+	  (when fen
+	    (chess-game-set-start-position game (chess-fen-to-pos fen))))
+	(chess-game-set-plies game (chess-pgn-read-plies game (chess-game-pos game) t))
 	game)
     (error "Data not in legal PGN format: '%s'"
 	   (buffer-substring (point) (point-max)))))
@@ -254,7 +265,6 @@ PGN text."
 ;;
 
 (require 'chess-database)
-(require 'chess-file)
 
 (defvar chess-pgn-database nil
   "Chess database object.")
@@ -383,6 +393,8 @@ PGN text."
 	  (if second-move
 	      (setq ply (1+ ply)))
 	  ply))))
+
+(defvar chess-file-locations nil)
 
 (defun chess-pgn-read-game ()
   "Load a database to represent this file if not already up."
